# vas-crucible

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
ebpf/: Cargo.toml
ebpf/headers/: vmlinux.h
ebpf/src/: main.rs
ebpf/src/bpf/: syscall_hook.c
protobuf/: vas.proto
src/: lib.rs  main.rs  sidecar.rs
src/enforcer/: ebpf_loader.rs  mod.rs  syscalls.rs
src/grpc/: client.rs  mod.rs  server.rs
src/jwt/: claims.rs  mod.rs  verifier.rs
src/sandbox/: docker.rs  limits.rs  mod.rs  pty.rs
tests/: integration.rs
tests/common/: mod.rs
tests/integration/: grpc_tests.rs  jwt_tests.rs  sandbox_tests.rs
