[package]
name = "vas-crucible"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Secure sandbox sidecar for code execution with JWT validation, Docker isolation, gRPC control, and eBPF policy enforcement."
build = "build.rs"

[workspace]
members = ["ebpf"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
bollard = "0.17"
futures = "0.3"
jsonwebtoken = "9.3"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.0"
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term"] }

[features]
default = []
ebpf = ["dep:aya", "dep:aya-log"]
